# kofl

./: .gitignore  README.md  build.gradle.kts  gradle.properties  grammar.bnf  settings.gradle.kts
backend.vm/: .gitignore  CMakeLists.txt  build.gradle.kts  build.sh  bytecode.c  bytecode.h  chunk.c  chunk.h  debug.c  debug.h  heap.c  heap.h  main.c  object.h  runtime.def  stack.c  stack.h  table.c  table.h  utils.c  value.c  value.h  vm.c  vm.h
backend.vm/include/koflvm/: bytecode.h  chunk.h  debug.h  heap.h  object.h  stack.h  table.h  value.h  vm.h
backend.vm/native/: BytecodeCompiler.kt  Compiler.kt  Debug.kt  Main.kt
backend.vm/native/compiler/: BytecodeCompiler.kt
backend.vm/native/interop/: Chunk.kt  Heap.kt  Value.kt  Vm.kt
backend.vm/native/memory/: Heap.kt
backend.vm/runtime/: CMakeLists.txt  bytecode.c  bytecode.h  chunk.c  chunk.h  debug.h  heap.c  heap.h  main.c  object.h  runtime.c  runtime.def  runtime.h  stack.c  stack.h  table.c  table.h  utils.h  value.c  value.h  vm.c  vm.h
backend.vm/src/: bytecode.cpp  chunk.cpp  debug.cpp  heap.cpp  main.cpp  object.cpp  stack.cpp  table.cpp  utils.cpp  utils.h  value.cpp  vm.cpp
compiler.common/: build.gradle.kts  dsl-generator.main.kts
compiler.common/common/: KoflCompileException.kt
compiler.common/dsl-generator/: build.gradle.kts
compiler.kvm/: build.gradle.kts
compiler.kvm/common/: KoflCompileException.kt
compiler.vm/: build.gradle.kts  example.chunk  example.kofl
compiler.vm/common/: Chunk.kt  Cli.kt  Compiler.kt  Koflc.kt  Utils.kt  Value.kt
compiler.vm/native/: Main.kt
composite-build/: build.gradle.kts
frontend/: build.gradle.kts
frontend/common/: Consts.kt  Dumper.kt  Errors.kt  Expr.kt  Parser.kt  Scanner.kt  Stack.kt  Stmt.kt  Token.kt  Utils.kt  consts.kt  errors.kt  expr.kt  parser.kt  (+7 more)
interpreter/: build.gradle.kts  build.sh  main.kofl
stdlib/: lib.kofl
vm/: build.gradle.kts
(+170 files in other folders)
